<resources>
    <string name="app_name">Ajedrez Infantil</string>
    <string name="capitulo1_parte1">Capítulo 1, parte 1</string>
    <string name="capitulo1_parte2">Capítulo 1, parte 2</string>
    <string name="capitulo2_parte1">Capítulo 2, parte 1</string>
    <string name="capitulo2_parte2">Capítulo 2, parte 2</string>
    <string name="acercadeLabel"> Acerca de...</string>
    <string name="acercade">Esta Aplicación ha sido desarrollada por alumnos y profesores del Máster en Desarrollo de Aplicaciones Móviles
        de la Universidad Politécnica de Valencia</string>
    <string name="linkAndroidCurso"><a href="http://www.androidcurso.com/">(wwww.androidcurso.com).</a></string>
    <string name="acercade2">Pretende ser un complemento a los vídeos “Aprende con Rey”</string>
    <string name="linkCanal"><a href="https://www.youtube.com/channel/UCanJ4GFmSQTnaD3z_95rQFg">https://www.youtube.com/channel/UCanJ4GFmSQTnaD3z_95rQFg\n</a></string>
    <string name="tituloCreditosApp">Aplicación</string>
    <string name="tituloCreditosAppProgramacion">Programación</string>
    <string name="textoCreditosProgramacion">
        Raúl Villar Boronat\n
        Usua Madina Iñigo\n
        Alonso González Nestal\n
        Jesús Tomás Gironés\n</string>
    <string name="tituloCreditosAppDiseño"> Diseño Gráfico</string>
    <string name="textoCreditosAppDiseño">Raúl Estévez Montero\n</string>
    <string name="tituloCreditosAppIdea">Idea Original</string>
    <string name="textoCreditosAppIdea">Jaime Lloret Mauri\n</string>
    <string name="tituloCreditosAppGuion">Guión</string>
    <string name="textoCreditosAppGuion">Jesús Tomás Gironés\n</string>
    <string name="tituloCreditosAppDireccion">Dirección</string>
    <string name="textoCreditosAppDireccion">Jesús Tomás Gironés\n</string>

    <string name="tituloCreditosVideo">Videos</string>
    <string name="tituloCreditosVideoGuion">Guión</string>
    <string name="textoCreditosVideoGuion">Raúl Estévez Montero\n</string>
    <string name="tituloCreditosVideoIdea">Idea Original</string>
    <string name="textoCreditosVideoIdea">Jaime Lloret Mauri\n</string>
    <string name="tituloCreditosVideoDiseño">Diseño</string>
    <string name="textoCreditosVideoDiseño">Raúl Estévez Montero y FreePik\n</string>
    <string name="tituloCreditosVideoAnimacion">Animación</string>
    <string name="textoCreditosVideoAnimacion">Raúl Estévez Montero\n</string>
    <string name="tituloCreditosVideoVoces">Voces</string>
    <string name="textoCreditosVideoVoces">Ignacio Navarro y Silvia Montes\n</string>
    <string name="tituloCreditosVideoSuperVision">SuperVisión</string>
    <string name="textoCreditosVideoSupervision">Jaime Lloret Mauri\n</string>

    <string name="textoTituloApp">Aprende con Rey</string>
    <string name="verVideo">Ver video</string>

    <string name="ej1Capitulo1Parte1">Coordenadas del tablero</string>
    <string name="ej2Capitulo1Parte1">Colocar piezas</string>


    <string name="ej1Capitulo1Parte2">Mover torre</string>
    <string name="ej2Capitulo1Parte2">Mover alfil</string>
    <string name="ej3Capitulo1Parte2">Mover dama</string>
    <string name="ej4Capitulo1Parte2">Mover caballo</string>
    <string name="ej5Capitulo1Parte2">Mover peón</string>
    <string name="ej6Capitulo1Parte2">Mover rey</string>

    <string name="ej1Capitulo2Parte1">Valor piezas</string>
    <string name="ej2Capitulo2Parte1">Colocar piezas</string>
    <string name="ej3Capitulo2Parte1">Mover rey en jaque</string>

    <string name="preguntaAlfiles">¿Cuántos alfiles tiene cada jugador?</string>
    <string name="respOpc1Alfiles">1 alfil</string>
    <string name="respOpc2Alfiles">2 alfiles</string>
    <string name="respOpc3Alfiles">8 alfiles</string>

    <string name="preguntaPeones">¿Cuántos peones tiene cada jugador?</string>
    <string name="respOpc1Peones">4 peones</string>
    <string name="respOpc2Peones">2 peones</string>
    <string name="respOpc3Peones">8 peones</string>

    <string name="preguntaReyes">¿Cuántos reyes tiene cada jugador?</string>
    <string name="respOpc1Reyes">1 rey</string>
    <string name="respOpc2Reyes">2 reyes</string>
    <string name="respOpc3Reyes">8 reyes</string>

    <string name="contenidos">Contenidos:</string>
    <string name="leccion">Lección:</string>
    <string name="ejercicios">Ejercicios:</string>
    <string name="valorPiezas">Los valores de las piezas</string>

    </resources>
