<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/capitulo1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondoPrincipal"
    android:orientation="horizontal"
    tools:context="es.upv.mmoviles.ajedrez.MainActivity">

    <es.upv.mmoviles.ajedrez.VistaAvatar
        android:id="@+id/vistaAvatar1"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_margin="10dp"
            android:gravity="center_vertical">

            <TextView
                android:text="@string/capitulo2_parte1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textoCapitulo21"
                android:textColor="@color/tituloCapitulo1"
                android:textSize="@dimen/textSizeTituloCapitulos"
                android:textStyle="normal|bold"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:layout_marginTop="5dp" />
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="false"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_gravity="center_vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|center"
                android:orientation="vertical"
                android:layout_gravity="center_vertical">

                <Button
                    android:id="@+id/boton12"
                    style="@style/boton.1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/verVideo"
                    android:onClick="boton12" />

                <Button
                    android:id="@+id/boton13"
                    style="@style/boton.2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ej1Capitulo2Parte1" />

                <Button
                    android:id="@+id/boton14"
                    style="@style/boton.2"
                    android:text="@string/ej2Capitulo2Parte1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="boton14"/>

                <Button
                    android:id="@+id/boton15"
                    style="@style/boton.2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ej3Capitulo2Parte1"
                    android:textColor="@color/botonFondo2" />


            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</LinearLayout>