<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/capitulo1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondoPrincipal"
    android:orientation="horizontal"
    tools:context="es.upv.mmoviles.ajedrez.MainActivity">

    <es.upv.mmoviles.ajedrez.VistaAvatar
        android:id="@+id/vistaAvatar1"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1" />

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:gravity="center_vertical"
            android:layout_marginTop="5dp">

            <TextView
                android:text="@string/capitulo1_parte1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textoCapitulo1"
                android:textColor="@color/tituloCapitulo1"
                android:textSize="@dimen/textSizeTituloCapitulos"
                android:textStyle="normal|bold"
                android:textAlignment="center"
                android:padding="15dp"
                android:textAllCaps="true" />
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/boton5"
                    style="@style/boton.2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="boton1"
                    android:text="@string/verVideo" />

                <Button
                    android:id="@+id/boton6"
                    style="@style/boton.1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="boton2"
                    android:text="@string/ej1Capitulo1Parte1" />

                <Button
                    android:id="@+id/boton7"
                    style="@style/boton.1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="boton3"
                    android:text="@string/ej2Capitulo1Parte1" />


            </LinearLayout>
        </ScrollView>

    </RelativeLayout>
</LinearLayout>